# redo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: HOW.md  ROADMAP.md  WHY.md
examples/: demo_store.rs
src/: lib.rs  main.rs  panic_hook.rs
src/cli/: diff.rs  fork.rs  inspect.rs  list.rs  mod.rs
src/format/: canonical.rs  event.rs  header.rs  mod.rs
src/hook/: mod.rs  schema.rs
src/recorder/: mod.rs  watcher.rs
src/store/: meta.rs  mod.rs  reader.rs  session.rs  writer.rs
src/tui/: diff_view.rs  mod.rs  spans.rs
tests/: diff_fixture.rs  end_to_end.rs  fork.rs  format_roundtrip.rs  hook_projection.rs  store_crash_safety.rs
tests/fixtures/diff/: expected.txt
tests/fixtures/hooks/: claude_code_v1.json
