[package]
name = "redo-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Time-travel debugger for Claude Code agent sessions"
repository = "https://github.com/aman751997/redo"
readme = "README.md"
keywords = ["claude", "agent", "debugger", "replay", "tui"]
categories = ["command-line-utilities", "development-tools::debugging"]
authors = ["Amandeep Singh"]

[lib]
name = "redo"
path = "src/lib.rs"

[[bin]]
name = "redo"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# IDs & encoding
uuid = { version = "1.10", features = ["v7", "serde"] }
base64 = "0.22"

# Compression
zstd = "0.13"

# TUI
ratatui = "0.28"
tui-tree-widget = "0.22"
crossterm = "0.28"

# PTY + signals
portable-pty = "0.8"
signal-hook = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux-only: inotify for dropbox watch
[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
